# food-finder

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  admin.Dockerfile  data.Dockerfile  docker-compose.yaml  mypy-data.sh  nginx.conf  package-lock.json  package.json  public.Dockerfile  server.Dockerfile
.github/: dependabot.yml
.github/workflows/: admin.yaml  data.yaml  deploy.yaml  docker.yaml  public.yaml  server.yaml
admin/: jest.config.mjs  next.config.js  package-lock.json  package.json
admin/__test__/: page.test.tsx
admin/lib/: apollo-provider.tsx  client.tsx
admin/src/app/: globals.css  layout.tsx  page.tsx
admin/src/app/category/: catcell.tsx  page.tsx
admin/src/app/restaurant/: page.tsx
admin/src/app/restaurant/[...region]/: clickcell.tsx  editcell.tsx  layout.tsx  menucell.tsx  page.tsx  popup.tsx  style.tsx  tagcell.tsx
data/: .dockerignore  .gitignore  README.md  pyproject.toml
data/data/: __init__.py  fetch.py  util.py
data/data/db/: __init__.py  models.py
data/data/map/: __init__.py  naver.py
data/tests/: test_naver.py
public/: .gitignore  _document.js  manifest.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
public/__test__/: page.test.tsx
public/src/app/: filters.tsx  globals.css  layout.tsx  loading.tsx  markerdata.tsx  page.tsx  region.tsx  restaurant.tsx  searchbar.tsx
public/src/app/datamap/: layout.tsx  loading.tsx  page.tsx
public/src/app/datamap/[...region]/: page.tsx
public/src/app/detail/: layout.tsx  page.tsx
public/src/app/listview/: layout.tsx  page.tsx
public/src/app/listview/[...region]/: detail.tsx  listitem.tsx  page.tsx
public/src/app/map/: layout.tsx  page.tsx
public/src/app/map/[...region]/: page.tsx
public/src/app/work/: layout.tsx  page.tsx
server/: .env  .eslintrc.js  .gitignore  Cargo.toml  README.md  __init__.py  db.py  env.py  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.py  tsconfig.json
server/migrations/2023-06-17-202503_create_review/: up.sql
server/migrations/2023-06-17-204653_create_restaurant/: down.sql  up.sql
server/migrations/2023-06-18-190804_create_review/: down.sql  up.sql
server/migrations/2023-06-19-225639_create_category/: down.sql  up.sql
server/migrations/2023-06-19-230118_create_subcategory/: down.sql  up.sql
server/search/: .gitignore  regions.json
server/server/: __init__.py  db.py  env.py  schema.py
server/server/db/: __init__.py  models.py
server/src/: category.json  db.rs  main.rs  schema.rs
server/tests/: test_simple.py
