[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Jaeyong Sung <jaeyong0201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
requests = "^2.31.0"
asyncio = "^3.4.3"
server = {path = "../server"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
