[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Jaeyong Sung <jaeyong0201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
requests = "^2.31.0"
asyncio = "^3.4.3"
server = {path = "../server"}
strawberry-graphql = {version = "^0.178", extras = ["debug-server"]}


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.0"
pylint = "^2.17.4"
mypy = "^1.3.0"
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
