[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Jaeyong Sung <jaeyong0201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
requests = "^2.31.0"
asyncio = "^3.4.3"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.16"}
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.0"
pylint = "^2.17.4"
mypy = "^1.3.0"
black = "^23.3.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
