[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
docker = []

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
actix-web-lab = "0.19.1"
diesel = { version = "2.1.0", features = ["postgres", "serde_json", "r2d2"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
juniper = "0.15"
log = "0.4.19"
serde = "1"
serde_json = "1"
